// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <span
      class="sc-fKgJPI jlSUcY sc-iwajpm kBfIHv sc-fXazdy kwxdFB sc-dvXYtj iIwpqY"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <span
      class="sc-fKgJPI jlSUcY sc-iwajpm hnqdBA sc-fXazdy kwxdFB sc-dvXYtj jfcnlj"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
